<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EnterRationNumber">

    <include layout="@layout/header" />

    <!-- title bar    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:text="@string/personal_details"
            android:textColor="@color/black"
            android:textSize="@dimen/title_bar_text"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:src="@drawable/logout" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/regular14sp"
            android:textColor="@color/black"
            android:text="@string/enter_ration_card_number"/>

        <EditText
            android:id="@+id/editRc"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/edit_text_border"
            android:autofillHints="ID" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/btnValidate"
            android:layout_width="160dp"
            android:layout_height="36dp"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_round"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/regular14sp"
            android:textColor="@color/black"
            android:text="@string/category"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/box_border"
            android:entries="@array/caste"
            android:textAlignment="textStart" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular14sp"
                android:textColor="@color/black"
                android:text="@string/enter_mobile_number"/>

            <EditText
                android:id="@+id/editMobile"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:inputType="phone"
                android:maxLength="10"
                android:background="@drawable/edit_text_border"
                android:autofillHints="ID" />


        </LinearLayout>


        <TextView
            android:layout_marginTop="30dp"
            android:text="@string/bank_account_details_of_the_female_head_of_the_family_to_receive_the_scheme_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

       <RadioButton
            android:id="@+id/aadhaarbank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/aadhaar_linked_bank"
            android:padding="10dp"/>

        <RadioButton
            android:id="@+id/otherbank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/other_bank" />
        </RadioGroup>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/btnNext"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_blue_round"
        />

</LinearLayout>