<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectHusband">

    <include layout="@layout/header" />

    <!-- title bar    -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:text="@string/husband_details_of_the_head_of_the_family"
            android:textColor="@color/black"
            android:textSize="@dimen/title_bar_text"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginEnd="3dp"
            android:src="@drawable/logout" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:id="@+id/husRecycler"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <Button
            android:text="eKYC of the Husband"
            android:id="@+id/ekycHusband"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

       <TextView
           android:text="@string/or"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="60dp"/>



<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/unmarried"
                    android:text="@string/unmarried"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />






                <RadioButton
                    android:id="@+id/husbandseperated"
                    android:text="@string/seperated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />





                <RadioButton
                    android:id="@+id/husbanddeceased"
                    android:text="@string/deceased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />





                <RadioButton
                    android:id="@+id/husbandalive"
                    android:visibility="gone"
                    android:text="@string/add_aadhaar_number_and_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="end"
            android:orientation="vertical"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/husband_name_as_per_aadhaar"
                    android:textColor="@color/black"
                    android:textSize="@dimen/regular14sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/apllicateName"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="4dp"
                    android:autofillHints="ID"
                    android:background="@drawable/edit_text_border"
                    android:padding="6dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:text="@string/aadhaar_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/regular14sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/aadhaarNumber"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="4dp"
                    android:autofillHints="ID"
                    android:background="@drawable/edit_text_border"
                    android:inputType="number"
                    android:maxLength="12"
                    android:padding="6dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBackBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="40dp"
                android:src="@drawable/back_arrow"
                app:tint="@color/blue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnHusbandSubmit"
                android:layout_width="160dp"
                android:layout_height="36dp"
                android:layout_gravity="end|right"
                android:background="@drawable/btn_blue_round"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/regular14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>