<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:contentPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/ration_card_number"

                     />

                <TextView
                    android:id="@+id/rcNoTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold"
                    android:text="WP 139/2021"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/application_status" />

                <TextView
                    android:id="@+id/husadhaarhashTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold"
                    android:text="@string/ready_for_submission"

                     />

            </RelativeLayout>

            <Button
                android:layout_gravity="right"
                android:text="@string/submit"
                android:background="@drawable/box_round"
                android:id="@+id/submitApplicationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>