<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Declaration">

    <include layout="@layout/header" />

    <!-- title bar    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:text="@string/declaration"
            android:textColor="@color/black"
            android:textSize="@dimen/title_bar_text"
            android:textStyle="bold" />


        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@drawable/logout"/>
    </RelativeLayout>

    <!-- dashboard card -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_1_i_and_my_husband_are_paying_income_tax"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
            <RadioButton
                android:id="@+id/yesTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/noTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_2_i_and_my_husband_are_filing_gst_returns"

            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/yesGST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="60dp"
                    android:text="@string/yes"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/noGST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/no"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/consentchk"
            android:layout_width="match_parent"
            android:text="@string/dec_text_1"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:visibility="gone"
            android:layout_width="match_parent"
            android:text="@string/dec_text_2"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@drawable/btn_blue_round"
            android:text="@string/complete_ekyc"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/regular14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    <ImageView
        android:id="@+id/ivBackBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:src="@drawable/back_arrow"
        app:tint="@color/blue" />


</LinearLayout>